--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
     "sqlite3": "^5.0.8"
   }
 }
